First cut at DEV-1672 (Cluster-wide stats monitoring), the UI portion of DEV-1683 (db backup), factored out cluster model, LiveObjectCounts (total and client), and client object browser.
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@9025 7fc7bbf3-cf45-46d4-be06-341739edd864