@@ -13,7 +13,7 @@ public class ClassTreeBranch extends ClassTreeTwig {
   public int getInstanceCount() {
     if(instanceCount == null) {
       ClassesHelper helper = ClassesHelper.getHelper();
-      instanceCount = new Integer(helper.getInstanceCount(this));
+      instanceCount = Integer.valueOf(helper.getInstanceCount(this));
     }
 
     return instanceCount.intValue();
