@@ -36,9 +36,9 @@ import javax.management.MBeanNotificationInfo;
 import javax.management.NotCompliantMBeanException;
 
 public class TCServerInfo extends AbstractTerracottaMBean implements TCServerInfoMBean, StateChangeListener {
-  private static final TCLogger                logger = TCLogging.getLogger(TCServerInfo.class);
+  private static final TCLogger                logger          = TCLogging.getLogger(TCServerInfo.class);
 
-  private static final boolean                 DEBUG  = false;
+  private static final boolean                 DEBUG           = false;
 
   private static final MBeanNotificationInfo[] NOTIFICATION_INFO;
   static {
@@ -58,6 +58,8 @@ public class TCServerInfo extends AbstractTerracottaMBean implements TCServerInf
   private final JVMMemoryManager               manager;
   private StatisticRetrievalAction             cpuSRA;
   private String[]                             cpuNames;
+
+  private static final String[]                EMPTY_CPU_NAMES = {};
 
   public TCServerInfo(final TCServer server, final L2State l2State) throws NotCompliantMBeanException {
     super(TCServerInfoMBean.class, true);
@@ -139,7 +141,7 @@ public class TCServerInfo extends AbstractTerracottaMBean implements TCServerInf
   }
 
   public MBeanNotificationInfo[] getNotificationInfo() {
-    return NOTIFICATION_INFO;
+    return Arrays.asList(NOTIFICATION_INFO).toArray(EMPTY_NOTIFICATION_INFO);
   }
 
   public void startBeanShell(int port) {
@@ -181,8 +183,8 @@ public class TCServerInfo extends AbstractTerracottaMBean implements TCServerInf
   }
 
   public String[] getCpuStatNames() {
-    if (cpuNames != null) return cpuNames;
-    if (cpuSRA == null) return cpuNames = new String[0];
+    if (cpuNames != null) return Arrays.asList(cpuNames).toArray(EMPTY_CPU_NAMES);
+    if (cpuSRA == null) return cpuNames = EMPTY_CPU_NAMES;
 
     List list = new ArrayList();
     StatisticData[] statsData = cpuSRA.retrieveStatisticData();
@@ -191,15 +193,15 @@ public class TCServerInfo extends AbstractTerracottaMBean implements TCServerInf
         list.add(statsData[i].getElement());
       }
     }
-    return cpuNames = (String[]) list.toArray(new String[0]);
+    return cpuNames = (String[]) list.toArray(EMPTY_CPU_NAMES);
   }
 
   public Map getStatistics() {
     HashMap<String, Object> map = new HashMap<String, Object>();
     MemoryUsage usage = manager.getMemoryUsage();
 
-    map.put(MEMORY_USED, new Long(usage.getUsedMemory()));
-    map.put(MEMORY_MAX, new Long(usage.getMaxMemory()));
+    map.put(MEMORY_USED, Long.valueOf(usage.getUsedMemory()));
+    map.put(MEMORY_MAX, Long.valueOf(usage.getMaxMemory()));
 
     if (cpuSRA != null) {
       StatisticData[] statsData = getCpuUsage();
